<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.bhadrasoft.trackmybullion.ActivityAddInvestment">

    <TextView
        android:id="@+id/activity_add_investment_tv_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:text="@string/select_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_vertical" />

    <EditText
        android:id="@+id/activity_add_investment_et_weight"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:text="@string/sampleWeight" />

    <EditText
        android:id="@+id/activity_add_investment_et_amount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:text="@string/sampleAmount"/>

    <Button
        android:id="@+id/activity_add_investment_button_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/save"/>

</LinearLayout>
